--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
 
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Calculator</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+
+    <body>
+        
+    </body>
+    
+    <script src="./script.js"></script>
+</html>
