--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
         <link rel="stylesheet" href="./style.css">
+        <script src="./script.js" defer></script>
     </head>
 
     <body>
-        
+        <div class="calc-container">
+            <div class="display">test
+                <div class="previous-op"></div>
+                <div class="current-op"></div>
+            </div>
+            <button>0</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>+</button>
+            <button>-</button>
+            <button>*</button>
+            <button>÷</button>
+            <button class="span-2">=</button>
+            <button>.</button>
+            <button>%</button>
+            <button>xʸ</button>
+            <button>x!</button>
+            <button>-/+</button>
+            <button class="span-2">AC</button>
+            <button>DEL</button>
+        </div>
     </body>
-    
-    <script src="./script.js"></script>
 </html>
