--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 
     <body>
         <div class="calc-container">
-            <div class="display">test
-                <div class="previous-op"></div>
-                <div class="current-op"></div>
+            <div class="display">
+                <div class="previous-op">123</div>
+                <div class="current-op">789</div>
             </div>
-            <button>0</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>+</button>
-            <button>-</button>
-            <button>*</button>
-            <button>÷</button>
-            <button class="span-2">=</button>
-            <button>.</button>
-            <button>%</button>
-            <button>xʸ</button>
-            <button>x!</button>
-            <button>-/+</button>
-            <button class="span-2">AC</button>
-            <button>DEL</button>
+            <button class="clear-all span-2 horizontal">AC</button>
+            <button class="delete">DEL</button>
+            <button class="operation">÷</button>
+            <button class="operation">%</button>
+            <button class="operation">x!</button>
+            <button class="operation">xʸ</button>
+            <button class="multiply">*</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operation">-</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operation">+</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="equal span-2 vertical">=</button>
+            <button class="negative number">-/+</button>
+            <button class="number">0</button>
+            <button class="number">.</button>
         </div>
     </body>
 </html>
