Fix class name for multiply button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="operation">%</button>
             <button class="operation">x!</button>
             <button class="operation">xʸ</button>
-            <button class="multiply">*</button>
+            <button class="operation">*</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
@@ -33,8 +33,8 @@
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
-            <button class="equal span-2 vertical">=</button>
-            <button class="negative number">-/+</button>
+            <button class="equals span-2 vertical">=</button>
+            <button class="operation">-/+</button>
             <button class="number">0</button>
             <button class="number">.</button>
         </div>
