--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             </div>
             <button class="clear-all span-2 horizontal">AC</button>
             <button class="delete">DEL</button>
-            <button class="operation">÷</button>
-            <button class="operation">%</button>
-            <button class="operation">x!</button>
-            <button class="operation">xʸ</button>
-            <button class="operation">*</button>
+            <button class="operation operator">÷</button>
+            <button class="operation special">%</button>
+            <button class="operation special">x!</button>
+            <button class="operation special">xʸ</button>
+            <button class="operation operator">*</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button class="operation">-</button>
+            <button class="operation operator">-</button>
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button class="operation">+</button>
+            <button class="operation operator">+</button>
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
