Change calls name for .display div and update .css with new class names

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <body>
         <div class="calc-container">
             <div class="display">
-                <div class="previous-op">123</div>
-                <div class="current-op">789</div>
+                <div class="secondary">123</div>
+                <div class="primary">789</div>
             </div>
             <button class="clear-all span-2 horizontal">AC</button>
             <button class="delete">DEL</button>
             <button class="operation operator">÷</button>
             <button class="operation special">%</button>
-            <button class="operation special">x!</button>
+            <button class="single-operation special">x!</button>
             <button class="operation special">xʸ</button>
             <button class="operation operator">*</button>
             <button class="number">7</button>
