Change class names in index.html
Deleted or renamed some of the class names for some of the elements.

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     <body>
         <div class="calc-container">
             <div class="display">
-                <div class="secondary">123</div>
-                <div class="primary">789</div>
+                <div class="current-operand-element"></div>
+                <div class="previous-operand-element"></div>            
             </div>
             <button class="clear-all span-2 horizontal">AC</button>
             <button class="delete">DEL</button>
-            <button class="operation operator">÷</button>
-            <button class="operation special">%</button>
-            <button class="single-operation special">x!</button>
-            <button class="operation special">xʸ</button>
-            <button class="operation operator">*</button>
+            <button class="operation">÷</button>
+            <button class="special percentage">%</button>
+            <button class="special factorial">!</button>
+            <button class="special square">x²</button>
+            <button class="operation">*</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button class="operation operator">-</button>
+            <button class="operation">-</button>
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button class="operation operator">+</button>
+            <button class="operation">+</button>
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
             <button class="equals span-2 vertical">=</button>
-            <button class="operation">-/+</button>
+            <button class="number">+/-</button>
             <button class="number">0</button>
             <button class="number">.</button>
         </div>
